--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-paginate": "^8.2.0",
+    "react-redux": "^9.0.4",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
+    "redux": "^5.0.0",
+    "redux-thunk": "^3.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
